@@ -10,13 +10,13 @@ package com.farao_community.farao.ce_merging.daily_merging.merging_report;
 import com.farao_community.farao.ce_merging.daily_merging.DailyMergingRepository;
 import com.farao_community.farao.ce_merging.daily_merging.entities.DailyInputs;
 import com.farao_community.farao.ce_merging.daily_merging.entities.DailyMergingTask;
-import com.farao_community.farao.ce_merging.daily_merging.merging_report.sheets.FilesSheet;
-import com.farao_community.farao.ce_merging.daily_merging.merging_report.sheets.MergeSheet;
-import com.farao_community.farao.ce_merging.daily_merging.merging_report.sheets.XNodeInconsistenciesSheet;
 import com.farao_community.farao.ce_merging.daily_merging.merging_request.RequestInformation;
+import com.farao_community.farao.ce_merging.daily_merging.output.merging_report.MergingReportBuilder;
+import com.farao_community.farao.ce_merging.daily_merging.output.merging_report.MergingReportService;
+import com.farao_community.farao.ce_merging.daily_merging.output.merging_report.sheets.FilesSheet;
+import com.farao_community.farao.ce_merging.daily_merging.output.merging_report.sheets.MergeSheet;
+import com.farao_community.farao.ce_merging.daily_merging.output.merging_report.sheets.XNodeInconsistenciesSheet;
 import com.farao_community.farao.ce_merging.merging.task.entities.Artifacts;
-import com.farao_community.farao.ce_merging.merging.task.entities.IgmData;
-import com.farao_community.farao.ce_merging.merging.task.entities.Inputs;
 import com.farao_community.farao.ce_merging.merging.task.entities.MergingTask;
 import com.farao_community.farao.ce_merging.merging.task.entities.SavedFile;
 import org.junit.jupiter.api.BeforeEach;
@@ -24,19 +24,22 @@ import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 
-import java.time.OffsetDateTime;
-import java.util.Arrays;
 import java.util.List;
+import java.util.Map;
 
 import static com.farao_community.farao.ce_merging.common.CeMergingConstants.AC;
 import static com.farao_community.farao.ce_merging.common.CeMergingConstants.EMPTY;
 import static com.farao_community.farao.ce_merging.merging.task.enums.ArtifactType.CGM_NET_POSITIONS_FILE;
 import static com.farao_community.farao.ce_merging.merging.task.enums.ArtifactType.XNODES_INCONSISTENCIES;
+import static com.farao_community.farao.ce_merging.merging.task.enums.IgmType.D2CF;
+import static com.farao_community.farao.ce_merging.merging.task.enums.IgmType.DACF;
 import static com.farao_community.farao.ce_merging.merging.task.enums.TaskStatus.ERROR;
 import static com.farao_community.farao.ce_merging.merging.task.enums.TaskStatus.SUCCESS;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static test_utils.CeTestUtils.createMockTask;
 import static test_utils.CeTestUtils.stringPathOf;
+import static test_utils.CeTestUtils.withTargetDateAndIgms;
 
 @SpringBootTest
 class MergingReportServiceTest {
@@ -59,30 +62,23 @@ class MergingReportServiceTest {
         artifacts.putFile(XNODES_INCONSISTENCIES, xnodesInconsistencies);
         artifacts.putFile(CGM_NET_POSITIONS_FILE, cgmNetPositionsFile);
 
-        final MergingTask task1 = new MergingTask();
-        final Inputs inputs1 = new Inputs();
-        inputs1.setTargetDate(OffsetDateTime.parse("2020-01-06T01:30Z"));
-        final IgmData igmCH = new IgmData();
-        igmCH.setIgmFilePath("mock/20200922_0430_FO2_CH0.UCT");
-        final IgmData igmIT = new IgmData();
-        igmIT.setIgmFilePath("mock/20200923_0430_2D1_IT4.uct");
-        inputs1.setIgms(List.of(igmCH, igmIT));
-        task1.setInputs(inputs1);
-        task1.setArtifacts(artifacts);
-        task1.setStatus(SUCCESS);
+        final MergingTask task1 = createMockTask(1L,
+                                                 withTargetDateAndIgms("2020-01-06T01:30Z",
+                                                                       Map.of("CH", "mock/20200922_0430_FO2_CH0.UCT",
+                                                                              "IT", "mock/20200923_0430_2D1_IT4.uct")),
+                                                 artifacts,
+                                                 SUCCESS);
 
-        final MergingTask task2 = new MergingTask();
-        final Inputs inputs2 = new Inputs();
-        inputs2.setTargetDate(OffsetDateTime.parse("2020-01-06T02:30Z"));
-        task2.setInputs(inputs2);
-        task2.setArtifacts(artifacts);
-        task2.setStatus(ERROR);
+        final MergingTask task2 = createMockTask(2L,
+                                                 withTargetDateAndIgms("2020-01-06T02:30Z", Map.of()),
+                                                 artifacts,
+                                                 ERROR);
         task2.setStatusDetail("ERROR CAUSE");
 
         dailyTask = new DailyMergingTask();
         final DailyInputs dailyInputs = new DailyInputs();
         dailyTask.setDailyInputs(dailyInputs);
-        tasksList = Arrays.asList(task1, task2);
+        tasksList = List.of(task1, task2);
         requestInformation = new RequestInformation("2020-01-05T23:00Z/2020-01-06T23:00Z",
                                                     "MergingCommonGridModel",
                                                     "PRODUCTION",
@@ -116,7 +112,7 @@ class MergingReportServiceTest {
     }
 
     @Test
-    public void shouldProduceFilesSheets() {
+    public void shouldProduceFilesSheetsWithIgmInfo() {
         final List<FilesSheet> filesSheets = builder.getFilesSheets();
         assertEquals(2, filesSheets.size());
         final FilesSheet first = filesSheets.getFirst();
@@ -124,17 +120,17 @@ class MergingReportServiceTest {
 
         assertEquals("20200106", first.bd());
         assertEquals("3", first.timestamp());
-        assertEquals("DACF", first.igmCH());
-        assertEquals("D2CF", first.igmIT());
+        assertEquals(DACF.name(), first.igmCH());
+        assertEquals(D2CF.name(), first.igmIT());
 
         assertEquals("20200106", last.bd());
         assertEquals("4", last.timestamp());
-        assertEquals("DACF", last.igmCH());
-        assertEquals("DACF", last.igmIT());
+        assertEquals(DACF.name(), last.igmCH());
+        assertEquals(DACF.name(), last.igmIT());
     }
 
     @Test
-    public void shouldProduceMergeSheets() {
+    public void shouldProduceMergeSheetsWithLoadFlowStatuses() {
         final List<MergeSheet> mergeSheets = builder.getMergeSheets();
         assertEquals(2, mergeSheets.size());
         final MergeSheet first = mergeSheets.getFirst();
